adding in changes rq

--- a/jackson-data-dev/data.ipynb
+++ b/jackson-data-dev/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = pd.read_json(\"../../data/Activity/Search/MyActivity.json\")\n",
+    "yt = pd.read_json(\"../../data/Activity/YouTube/MyActivity.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>header</th>\n",
+       "      <th>title</th>\n",
+       "      <th>titleUrl</th>\n",
+       "      <th>time</th>\n",
+       "      <th>products</th>\n",
+       "      <th>activityControls</th>\n",
+       "      <th>locationInfos</th>\n",
+       "      <th>details</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for google takeout</td>\n",
+       "      <td>https://www.google.com/search?q=google+takeout</td>\n",
+       "      <td>2025-04-27T22:44:36.364Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>[{'name': 'At this general area', 'url': 'http...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for python tqdm</td>\n",
+       "      <td>https://www.google.com/search?q=python+tqdm</td>\n",
+       "      <td>2025-04-27T22:07:37.367Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>[{'name': 'At this general area', 'url': 'http...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for python google generative ai library</td>\n",
+       "      <td>https://www.google.com/search?q=python+google+...</td>\n",
+       "      <td>2025-04-27T22:07:22.558Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>[{'name': 'At this general area', 'url': 'http...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for how to fetch main branch</td>\n",
+       "      <td>https://www.google.com/search?q=how+to+fetch+m...</td>\n",
+       "      <td>2025-04-27T22:04:50.074Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>[{'name': 'At this general area', 'url': 'http...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for TypeError: sample(): incompatible...</td>\n",
+       "      <td>https://www.google.com/search?q=TypeError:+sam...</td>\n",
+       "      <td>2025-04-27T19:57:33.094Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>[{'name': 'At this general area', 'url': 'http...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15950</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Visited College Board - SAT, AP, College Searc...</td>\n",
+       "      <td>https://www.google.com/url?q=https://www.colle...</td>\n",
+       "      <td>2018-01-11T21:31:14.629Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15951</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for college board</td>\n",
+       "      <td>https://www.google.com/search?q=college+board</td>\n",
+       "      <td>2018-01-11T21:30:52.246Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15952</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Visited https://www.google.com/gmail/</td>\n",
+       "      <td>https://www.google.com/gmail/</td>\n",
+       "      <td>2018-01-11T21:22:04.639Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15953</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Searched for gmail</td>\n",
+       "      <td>https://www.google.com/search?q=gmail</td>\n",
+       "      <td>2018-01-11T21:22:00.029Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15954</th>\n",
+       "      <td>Search</td>\n",
+       "      <td>Visited Google Search</td>\n",
+       "      <td>https://www.google.com</td>\n",
+       "      <td>2018-01-04T03:45:15.081Z</td>\n",
+       "      <td>[Search]</td>\n",
+       "      <td>[Web &amp; App Activity]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15955 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       header                                              title  \\\n",
+       "0      Search                        Searched for google takeout   \n",
+       "1      Search                           Searched for python tqdm   \n",
+       "2      Search   Searched for python google generative ai library   \n",
+       "3      Search              Searched for how to fetch main branch   \n",
+       "4      Search  Searched for TypeError: sample(): incompatible...   \n",
+       "...       ...                                                ...   \n",
+       "15950  Search  Visited College Board - SAT, AP, College Searc...   \n",
+       "15951  Search                         Searched for college board   \n",
+       "15952  Search              Visited https://www.google.com/gmail/   \n",
+       "15953  Search                                 Searched for gmail   \n",
+       "15954  Search                              Visited Google Search   \n",
+       "\n",
+       "                                                titleUrl  \\\n",
+       "0         https://www.google.com/search?q=google+takeout   \n",
+       "1            https://www.google.com/search?q=python+tqdm   \n",
+       "2      https://www.google.com/search?q=python+google+...   \n",
+       "3      https://www.google.com/search?q=how+to+fetch+m...   \n",
+       "4      https://www.google.com/search?q=TypeError:+sam...   \n",
+       "...                                                  ...   \n",
+       "15950  https://www.google.com/url?q=https://www.colle...   \n",
+       "15951      https://www.google.com/search?q=college+board   \n",
+       "15952                      https://www.google.com/gmail/   \n",
+       "15953              https://www.google.com/search?q=gmail   \n",
+       "15954                             https://www.google.com   \n",
+       "\n",
+       "                           time  products      activityControls  \\\n",
+       "0      2025-04-27T22:44:36.364Z  [Search]  [Web & App Activity]   \n",
+       "1      2025-04-27T22:07:37.367Z  [Search]  [Web & App Activity]   \n",
+       "2      2025-04-27T22:07:22.558Z  [Search]  [Web & App Activity]   \n",
+       "3      2025-04-27T22:04:50.074Z  [Search]  [Web & App Activity]   \n",
+       "4      2025-04-27T19:57:33.094Z  [Search]  [Web & App Activity]   \n",
+       "...                         ...       ...                   ...   \n",
+       "15950  2018-01-11T21:31:14.629Z  [Search]  [Web & App Activity]   \n",
+       "15951  2018-01-11T21:30:52.246Z  [Search]  [Web & App Activity]   \n",
+       "15952  2018-01-11T21:22:04.639Z  [Search]  [Web & App Activity]   \n",
+       "15953  2018-01-11T21:22:00.029Z  [Search]  [Web & App Activity]   \n",
+       "15954  2018-01-04T03:45:15.081Z  [Search]  [Web & App Activity]   \n",
+       "\n",
+       "                                           locationInfos details  \n",
+       "0      [{'name': 'At this general area', 'url': 'http...     NaN  \n",
+       "1      [{'name': 'At this general area', 'url': 'http...     NaN  \n",
+       "2      [{'name': 'At this general area', 'url': 'http...     NaN  \n",
+       "3      [{'name': 'At this general area', 'url': 'http...     NaN  \n",
+       "4      [{'name': 'At this general area', 'url': 'http...     NaN  \n",
+       "...                                                  ...     ...  \n",
+       "15950                                                NaN     NaN  \n",
+       "15951                                                NaN     NaN  \n",
+       "15952                                                NaN     NaN  \n",
+       "15953                                                NaN     NaN  \n",
+       "15954                                                NaN     NaN  \n",
+       "\n",
+       "[15955 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_m/1l5g3ybj3tq0zbv9zsff88c00000gn/T/ipykernel_10040/3873926297.py:26: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).\n",
-      "  activities['calendarDate'] = activities['beginTimestamp'].apply(lambda x: datetime.utcfromtimestamp(x / 1000))\n"
+     "ename": "FileNotFoundError",
+     "evalue": "File /Users/jacksonmiskill/class/s25/public-health/project3/jackson-data/garmin_data/sleep.json does not exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# load up the Garmin data\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m sleep = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgarmin_directory\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43msleep.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(garmin_directory + \u001b[33m\"\u001b[39m\u001b[33msummarizedActivities.json\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      4\u001b[39m         raw_data = json.load(f)[\u001b[32m0\u001b[39m][\u001b[33m'\u001b[39m\u001b[33msummarizedActivitiesExport\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/class/s25/public-health/project3/env/lib/python3.12/site-packages/pandas/io/json/_json.py:791\u001b[39m, in \u001b[36mread_json\u001b[39m\u001b[34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options, dtype_backend, engine)\u001b[39m\n\u001b[32m    788\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m convert_axes \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m orient != \u001b[33m\"\u001b[39m\u001b[33mtable\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    789\u001b[39m     convert_axes = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m791\u001b[39m json_reader = \u001b[43mJsonReader\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    792\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpath_or_buf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    793\u001b[39m \u001b[43m    \u001b[49m\u001b[43morient\u001b[49m\u001b[43m=\u001b[49m\u001b[43morient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    794\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtyp\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    795\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    796\u001b[39m \u001b[43m    \u001b[49m\u001b[43mconvert_axes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconvert_axes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    797\u001b[39m \u001b[43m    \u001b[49m\u001b[43mconvert_dates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconvert_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    798\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkeep_default_dates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeep_default_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    799\u001b[39m \u001b[43m    \u001b[49m\u001b[43mprecise_float\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprecise_float\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    800\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdate_unit\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdate_unit\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    801\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    802\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlines\u001b[49m\u001b[43m=\u001b[49m\u001b[43mlines\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    803\u001b[39m \u001b[43m    \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m=\u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    804\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    805\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    806\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    807\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding_errors\u001b[49m\u001b[43m=\u001b[49m\u001b[43mencoding_errors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    808\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    809\u001b[39m \u001b[43m    \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m=\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    810\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    812\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m chunksize:\n\u001b[32m    813\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m json_reader\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/class/s25/public-health/project3/env/lib/python3.12/site-packages/pandas/io/json/_json.py:904\u001b[39m, in \u001b[36mJsonReader.__init__\u001b[39m\u001b[34m(self, filepath_or_buffer, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, lines, chunksize, compression, nrows, storage_options, encoding_errors, dtype_backend, engine)\u001b[39m\n\u001b[32m    902\u001b[39m     \u001b[38;5;28mself\u001b[39m.data = filepath_or_buffer\n\u001b[32m    903\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.engine == \u001b[33m\"\u001b[39m\u001b[33mujson\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m904\u001b[39m     data = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_data_from_filepath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    905\u001b[39m     \u001b[38;5;28mself\u001b[39m.data = \u001b[38;5;28mself\u001b[39m._preprocess_data(data)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/class/s25/public-health/project3/env/lib/python3.12/site-packages/pandas/io/json/_json.py:960\u001b[39m, in \u001b[36mJsonReader._get_data_from_filepath\u001b[39m\u001b[34m(self, filepath_or_buffer)\u001b[39m\n\u001b[32m    952\u001b[39m     filepath_or_buffer = \u001b[38;5;28mself\u001b[39m.handles.handle\n\u001b[32m    953\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m (\n\u001b[32m    954\u001b[39m     \u001b[38;5;28misinstance\u001b[39m(filepath_or_buffer, \u001b[38;5;28mstr\u001b[39m)\n\u001b[32m    955\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m filepath_or_buffer.lower().endswith(\n\u001b[32m   (...)\u001b[39m\u001b[32m    958\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_exists(filepath_or_buffer)\n\u001b[32m    959\u001b[39m ):\n\u001b[32m--> \u001b[39m\u001b[32m960\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath_or_buffer\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m does not exist\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    961\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    962\u001b[39m     warnings.warn(\n\u001b[32m    963\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPassing literal json to \u001b[39m\u001b[33m'\u001b[39m\u001b[33mread_json\u001b[39m\u001b[33m'\u001b[39m\u001b[33m is deprecated and \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    964\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mwill be removed in a future version. To read from a \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m    967\u001b[39m         stacklevel=find_stack_level(),\n\u001b[32m    968\u001b[39m     )\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: File /Users/jacksonmiskill/class/s25/public-health/project3/jackson-data/garmin_data/sleep.json does not exist"
      ]
     }
    ],
